--- a/css/styles.css
+++ b/css/styles.css
@@ -1,40 +1,27 @@
 body {
   font-size: 16px;
   line-height: 24px;
-  font-family: "Roboto";
-  font-weight: normal;
+  font-family: "Roboto", "Arial", sans-serif;;
+  font-weight: 400;
   color: #283136;
-}
-
-h1 {
-  font-size: 55px;
-  line-height: 30px;
-  font-family: "Roboto";
-  font-weight: bold;
-  color: #000000;
 }
 
 h2 {
   font-size: 24px;
   line-height: 30px;
-  font-family: "Roboto";
-  font-weight: bold;
+  font-weight: 700;
   color: #000000;
 }
 
 h3 {
   font-size: 16px;
   line-height: 24px;
-  font-family: "Roboto";
-  font-weight: bold;
+  font-weight: 700;
   color: #000000;
 }
 
-.lead {
-  font-size: 55px;
-  line-height: 55px;
-  font-family: "Roboto";
-  font-weight: bolder;
+.slogan {
+  font-weight: 500;
   color: #000000;
 }
 
@@ -45,18 +32,18 @@ h3 {
 }
 
 .container {
-  width: 1160px;
+  width: 1200px;
   margin: 0 auto;
   padding: 0 20px;
 }
 
 .main-header {
   margin-bottom: 80px;
-  padding-top: 50px;
+  padding-top: 49px;
 }
 
 .header-top {
-  margin-bottom: 20px;
+  margin-bottom: 18px;
 }
 
 .logo {
@@ -80,25 +67,29 @@ h3 {
   width: 400px;
 }
 
-.main-header .lead {
-  margin-top: 40px;
-  margin-bottom: 40px;
+.main-header .slogan {
+  margin-top: 68px;
+  margin-bottom: 29px;
+
+  font-size: 55px;
+  line-height: 55px;
 }
 
 .main-header .description {
   max-width: 360px;
-  margin-bottom: 40px;
+  margin-bottom: 43px;
 }
 
 .main-header .slider {
   float: right;
-  width: 760px;
+  width: 730px;
 }
 
 .slider .pic {
   float: right;
   width: 698px;
   margin: 0;
+  padding-right: 30px;
 }
 
 .main-header h1.title {
@@ -124,7 +115,7 @@ h3 {
 .feature-item .pic {
   width: 300px;
   margin: 0;
-  margin-bottom: 25px;
+  margin-bottom: 26px;
 }
 
 .feature-item .title {
@@ -133,12 +124,12 @@ h3 {
 
 .feature-item .description {
   max-width: 260px;
-  margin-bottom: 30px;
+  margin-bottom: 37px;
 }
 
 .about {
-  padding-top: 40px;
-  padding-bottom: 80px;
+  padding-top: 42px;
+  padding-bottom: 79px;
 }
 
 .about .left {
@@ -146,18 +137,20 @@ h3 {
   width: 660px;
 }
 
-.about .lead {
-  margin-top: 40px;
-  margin-bottom: 40px;
+.about .slogan {
+  margin-top: 41px;
+  margin-bottom: 35px;
+
   font-size: 45px;
+  line-height: 45px;
 }
 
 .about .description {
-  margin-bottom: 45px;
+  margin-bottom: 48px;
 }
 
-.about h3.title {
-  margin-bottom: 30px;
+.orders h3.title {
+  margin-bottom: 32px;
 }
 
 .strengths {
@@ -168,7 +161,7 @@ h3 {
 
 .strengths .pic {
   margin: 0;
-  margin-bottom: 40px;
+  margin-bottom: 41px;
 }
 
 .strengths h3.title {
@@ -186,8 +179,10 @@ h3 {
 }
 
 .clients {
-  min-height: 180px;
   margin-bottom: 80px;
+  padding-top: 46px;
+  padding-bottom: 46px;
+
   font-size: 0;
   text-align: center;
 }
@@ -204,17 +199,21 @@ h3 {
 }
 
 .map {
-  padding-top: 50px;
-  padding-bottom: 50px;
+  padding-top: 54px;
+  padding-bottom: 54px;
 }
 
 .contacts {
   width: 320px;
-  padding: 50px;
+  padding: 54px 51px;
+}
+
+.contacts h3.title {
+  margin-top: 0;
 }
 
 .social {
-  margin-top: 70px;
+  margin-top: 69px;
   margin-bottom: 70px;
 }
 
@@ -230,7 +229,12 @@ h3 {
 }
 
 .promo-text .slogan {
+  display: block;
+  margin-top: 8px;
+
   font-size: 36px;
+  line-height: 36px;
+  font-weight: 700;
 }
 
 .characteristics {
