--- a/css/styles.css
+++ b/css/styles.css
@@ -112,6 +112,27 @@ h3 {
   opacity: 0.3;
 }
 
+.main-nav a.active {
+	position: relative;
+	
+	color: #000000;
+	
+	opacity: 1;
+	cursor: default;
+}
+
+.main-nav .active::after {
+	content: "";
+	position: absolute;
+	right: 23px;
+	bottom: 6px;
+	left: 23px;
+	
+	height: 2px;
+	
+	background-color: #fb565a;
+}
+
 .shopping-cart {
   float: right;
   max-width: 160px;
@@ -350,8 +371,8 @@ h3 {
 }
 
 .about {
-  padding-top: 42px;
-  padding-bottom: 73px;
+  padding-top: 38px;
+  padding-bottom: 75px;
 
   border-bottom: 2px solid #eeeeee;
 }
@@ -372,7 +393,7 @@ h3 {
 }
 
 .about .description {
-  margin-bottom: 40px;
+  margin-bottom: 39px;
 }
 
 .about .title {
@@ -383,23 +404,38 @@ h3 {
 }
 
 .orders h3.title {
-  margin-bottom: 25px;
+  margin-bottom: 24px;
 }
 
 .orders .list {
   margin: 0;
-  margin-left: 35px;
+  margin-left: 0;
   padding: 0;
 
   list-style: none;
 }
 
 .orders li {
+	position: relative;
+	
   margin-bottom: 24px;
+	padding-left: 36px;
 }
 
 .orders li:last-child {
   margin-bottom: 0;
+}
+
+.orders li::before {
+	content: "";
+	position: absolute;
+	top: 50%;
+	left: 0;
+	
+	width: 25px;
+	height: 2px;
+	
+	background-color: #fb565a;
 }
 
 .strengths {
@@ -453,6 +489,8 @@ h3 {
 }
 
 .clients {
+	position: relative;
+	
   margin-bottom: 80px;
   padding-top: 46px;
   padding-bottom: 46px;
@@ -463,13 +501,28 @@ h3 {
   border-bottom: 2px solid #eeeeee;
 }
 
+.clients::before {
+	content: "";
+	position: absolute;
+	top: 64px;
+	left: 280px;
+	bottom: 64px;
+	
+	width: 2px;
+	
+	background-color: #eeeeee;
+	box-shadow:
+		298px 0 0 0 #eeeeee,
+		598px 0 0 0 #eeeeee;
+}
+
 .clients .pic {
-  display: inline-block;
+	display: inline-block;
   width: 300px;
   margin: 0;
   box-sizing: border-box;
   vertical-align: middle;
-
+	
 	cursor: pointer;
 	
   opacity: 0.2;
@@ -485,13 +538,19 @@ h3 {
 
 .clients .pic:first-child {
   width: 280px;
+	padding-top: 6px;
+	padding-left: 31px;
+	
+	text-align: left;
 }
 
 .clients .pic:last-child {
   width: 280px;
   margin-right: 0;
-
-  border-right: none;
+	padding-top: 4px;
+	padding-right: 43px;
+	
+	text-align: right;
 }
 
 .clients .pic:first-child {
@@ -512,16 +571,16 @@ h3 {
 
 .map {
   padding-top: 53px;
-  padding-bottom: 53px;
+  padding-bottom: 55px;
 
   background-image: url("../img/map.jpg");
   background-repeat: no-repeat;
-  background-position: 52% 100%;
+  background-position: 50% 0%;
 }
 
 .contacts {
   width: 320px;
-  padding: 47px 48px;
+  padding: 49px 49px;
   box-sizing: border-box;
 
   background-color: #ffffff;
@@ -529,7 +588,7 @@ h3 {
 
 .contacts h3.title {
   margin-top: 0;
-  margin-bottom: 22px;
+  margin-bottom: 23px;
 
   font-weight: 700;
   font-size: 18px;
@@ -539,7 +598,7 @@ h3 {
 
 .contacts p {
   max-width: 220px;
-
+	
   font-weight: 400;
   font-size: 16px;
   line-height: 18px;
@@ -579,7 +638,7 @@ h3 {
 }
 
 .social {
-  margin-top: 69px;
+  margin-top: 66px;
   margin-bottom: 70px;
 }
 
@@ -589,15 +648,14 @@ h3 {
 }
 
 .social-btn {
-  position: relative;
-
   display: inline-block;
   width: 78px;
   height: 78px;
-  margin-right: 8px;
+  margin-right: 9px;
 	vertical-align: top;
 	
   font-size: 0;
+	line-height: 78px;
   text-align: center;
   cursor: pointer;
 
@@ -618,12 +676,10 @@ h3 {
 }
 
 .icon {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-
   display: inline-block;
   vertical-align: middle;
+	
+	line-height: 78px;
 
   background-image: url("../img/sprite.png");
   background-repeat: no-repeat;
@@ -636,8 +692,6 @@ h3 {
 .fb {
   width: 12px;
   height: 22px;
-  margin-top: -11px;
-  margin-left: -6px;
 
   background-position: -30px -5px;
 }
@@ -645,8 +699,6 @@ h3 {
 .inst {
   width: 21px;
   height: 21px;
-  margin-top: -10.5px;
-  margin-left: -10.5px;
 
   background-position: -52px -5px;
 }
@@ -654,8 +706,6 @@ h3 {
 .vk {
   width: 26px;
   height: 15px;
-  margin-top: -7.5px;
-  margin-left: -13px;
 
   background-position: -83px -5px;
 }
@@ -663,7 +713,7 @@ h3 {
 .promo-text {
   float: left;
   width: 560px;
-  margin-left: 137px;
+  margin-left: 139px;
 }
 
 .promo-text .slogan {
@@ -745,28 +795,59 @@ h3 {
 	background-color: #eeeeee;
 }
 
+.slider .main-line {
+	position: absolute;
+	top: 50%;
+	left: 10%;
+	right: 10%;
+	z-index: 1;
+	
+	height: 2px;
+	margin-top: -1px;
+	margin-left: -9px;
+	
+	background-color: #d7dcde;
+}
+
+.slider .current-line {
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 73px;
+	z-index: 1;
+	
+	height: 2px;
+	
+	background-color: #00ca74;
+}
+
 .slider .mark {
 	position: absolute;
 	top: 50%;
+	z-index: 2;
 	
 	width: 20px;
 	height: 20px;
 	margin-top: -10px;
-	margin-left: -10px;
 	
 	background-color: #ffffff;
 	border-radius: 100px;
+	box-shadow: 0 3px 2px 0 #cccdcd;
+	cursor: pointer;
 }
 
-.slider .mark:first-child {
-	left: 10%;
+.slider .start-mark {
+	left: 27px;
+	
+	margin-left: -10px;
 }
 
-.slider .mark:last-child {
-	right: 30%;
+.slider .finish-mark {
+	right: 80px;
 }
 
-.mark .point {
+.mark::before {
+	content: "";
 	position: absolute;
 	top: 50%;
 	left: 50%;
@@ -891,7 +972,7 @@ h3 {
 }
 
 .catalog-top .active {
-	cursor: auto;
+	cursor: default;
 }
 
 .catalog-top .sort-mark:last-child {
@@ -905,12 +986,16 @@ h3 {
   width: 360px;
   margin-right: 0;
   margin-bottom: 36px;
+	padding-top: 40px;
   vertical-align: top;
 	
   font-size: 16px;
   line-height: 18px;
 	text-align: center;
 	
+	background-color: #e9e9e9;
+	border-top-left-radius: 5px;
+	border-top-right-radius: 5px;
 	cursor: pointer;
 }
 
@@ -918,45 +1003,26 @@ h3 {
   margin-right: 40px;
 }
 
-.top-line {
-	position: relative;
-	
-	height: 40px;
-	
-	font-size: 0;
-	text-align: left;
-	
-	background-color: #e9e9e9;
-}
-
-.catalog-item:hover .top-line {
+.catalog-item:hover {
 	background-color: #4d4d4d;
 }
 
-.line-mark {
+.catalog-item::before {
+	content: "";
 	position: absolute;
-	top: 50%;
+	top: 20px;
+	left: 22px;
 	
 	width: 14px;
 	height: 14px;
 	margin-top: -7px;
-	margin-right: 10px;
 	margin-left: -7px;
 	
 	background-color: #ffffff;
 	border-radius: 100px;
-}
-
-.line-mark:first-child {
-	left: 23px;
-}
-
-.line-mark:nth-child(2) {
-	left: 46px;
-}
-
-.line-mark:last-child {
-	left: 68px;
+	box-shadow:
+		48px 0 0 0 #ffffff,
+		24px 0 0 0 #ffffff;
 }
 
 .catalog-item .pic {
@@ -1027,7 +1093,7 @@ h3 {
 
 .catalog-pages {
   margin-top: 22px;
-  margin-bottom: 50px;
+  margin-bottom: 60px;
 	font-size: 0;
 }
 
@@ -1075,7 +1141,22 @@ h3 {
 .catalog-pages .btn.active {
 	padding: 13px;
 	
+	color: #000000;
+	
 	background-color: #ffffff;
 	border: 3px solid #dbdbdb;
-	cursor: auto;
+	box-shadow: none;
+	cursor: default;
+}
+
+.contact-block {
+	position: fixed;
+	bottom: 200px;
+	left: 10%;
+	
+	width: 960px;
+	padding: 73px 100px;
+	box-sizing: border-box;
+	
+	background-color: #ffffff;
 }
