--- a/css/styles.css
+++ b/css/styles.css
@@ -176,7 +176,7 @@ h3 {
 
   background-image: url("../img/sprite.png");
   background-repeat: no-repeat;
-  background-position: -5px -5px;
+  background-position: -75px -5px;
   opacity: 0.3;
 }
 
@@ -693,21 +693,21 @@ h3 {
   width: 12px;
   height: 22px;
 
-  background-position: -30px -5px;
+  background-position: -100px -5px;
 }
 
 .inst {
   width: 21px;
   height: 21px;
 
-  background-position: -52px -5px;
+  background-position: -122px -5px;
 }
 
 .vk {
   width: 26px;
   height: 15px;
 
-  background-position: -83px -5px;
+  background-position: -153px -5px;
 }
 
 .promo-text {
@@ -782,6 +782,63 @@ h3 {
 .grid li:last-child,
 .features li:last-child {
 	margin-bottom: 0;
+}
+
+input[type="radio"],
+input[type="checkbox"] {
+	display: none;
+}
+
+input[type="radio"] + label,
+input[type="checkbox"] + label {
+	position: relative;
+	
+	display: block;
+	padding-left: 35px;
+	
+	cursor: pointer;
+}
+
+input[type="radio"] + label::before,
+input[type="checkbox"] + label::before {
+	content: "";
+	position: absolute;
+	top: 0;
+	left: 0;
+	
+	background-image: url("../img/sprite.png");
+	background-repeat: no-repeat;
+	opacity: 0.4;
+}
+
+input[type="radio"] + label:hover::before,
+input[type="checkbox"] + label:hover::before {
+	opacity: 1;
+}
+
+input[type="radio"] + label::before {
+	width: 25px;
+	height: 25px;
+	
+	background-position: -189px -5px;
+}
+
+input[type="radio"]:checked + label::before {
+	background-position: -224px -5px;
+}
+
+input[type="checkbox"] + label::before {
+	width: 23px;
+	height: 23px;
+	
+	background-position: -5px -5px;
+}
+
+input[type="checkbox"]:checked + label::before {
+	width: 27px;
+	height: 23px;
+	
+	background-position: -38px -5px;
 }
 
 .characteristics .slider {
@@ -944,6 +1001,8 @@ h3 {
 .catalog-top .right {
 	float: right;
 	width: 360px;
+	
+	text-align: right;
 }
 
 .catalog-top .sort-mark {
@@ -966,17 +1025,51 @@ h3 {
 	opacity: 0.6;
 }
 
-.catalog-top .sort-mark.active,
-.catalog-top .sort-mark:active {
-	opacity: 1;
-}
-
-.catalog-top .active {
+.catalog-top a.active {
 	cursor: default;
 }
 
-.catalog-top .sort-mark:last-child {
+.catalog-top a:nth-child(3) {
+	margin-right: 49px;
+}
+
+.catalog-top .sort-btn {
+	display: inline-block;
+	width: 0;
+	height: 0;
+	margin-right: 20px;
+	vertical-align: middle;
+	
+	opacity: 0.2;
+}
+
+.catalog-top .sort-btn:hover {
+	opacity: 0.4;
+}
+
+.catalog-top .sort-mark:active,
+.catalog-top .sort-mark.active,
+.catalog-top .sort-btn:active,
+.catalog-top .sort-btn.active {
+	opacity: 1;
+}
+
+.catalog-top a:nth-child(4) {
+	border-style: inset;
+	border-width: 10px 5px 0 5px;
+	border-color: #000000 transparent transparent transparent;
+	
+	-webkit-transform:rotate(360deg);
+}
+
+.catalog-top a:last-child {
 	margin-right: 0;
+	
+	border-style: inset;
+	border-width: 0 5px 10px 5px;
+	border-color: transparent transparent #000000 transparent;
+	
+	-webkit-transform:rotate(360deg);
 }
 
 .catalog-item {
@@ -1027,7 +1120,13 @@ h3 {
 
 .catalog-item .pic {
   margin: 0;
-	margin-top: -1px;
+}
+
+.catalog-item img {
+	display: block;
+	box-sizing: border-box;
+	
+	border: 1px solid #e5e5e5;
 }
 
 .item-description {
@@ -1151,12 +1250,140 @@ h3 {
 
 .contact-block {
 	position: fixed;
-	bottom: 200px;
-	left: 10%;
+	top: 50%;
+	left: 50%;
+	z-index: 10;
 	
 	width: 960px;
-	padding: 73px 100px;
+	height: 590px;
+	margin-top: -295px;
+	margin-left: -480px;
+	padding-top: 67px;
+	padding-right: 98px;
+	padding-bottom: 82px;
+	padding-left: 98px;
 	box-sizing: border-box;
 	
 	background-color: #ffffff;
+	box-shadow: 0 20px 70px -10px #000101;
+}
+
+.contact-block::before,
+.contact-block::after {
+	content: "";
+	position: absolute;
+	top: 87px;
+	right: 88px;
+	
+	width: 25px;
+	height: 5px;
+	
+	background-color: #e74246;
+	opacity: 0.3;
+}
+
+.contact-block::before:hover,
+.contact-block::after:hover {
+	opacity: 1;
+}
+
+.contact-block::before {
+	transform: rotate(45deg);
+}
+
+.contact-block::after {
+	transform: rotate(135deg);
+}
+
+.contact-block .title {
+	margin-top: 0;
+	margin-bottom: 41px;
+	
+	font-weight: 500;
+	font-size: 45px;
+	line-height: 45px;
+	color: #000000;
+}
+
+.form-left {
+	float: left;
+	width: 360px;
+}
+
+.form-right {
+	float: right;
+	width: 360px;
+}
+
+.contact-form label {
+	display: block;
+	width: 100%;
+	margin-bottom: 9px;
+	
+	font-weight: 700;
+	font-size: 16px;
+	line-height: 18px;
+}
+
+.contact-form input {
+	display: block;
+	width: 100%;
+	margin-bottom: 35px;
+	padding: 14px;
+	box-sizing: border-box;
+	
+	border: 2px solid #d7dcde;
+	outline: none;
+}
+
+.contact-form input:hover {
+	border-color: #b4b9bb;
+}
+
+.contact-form input:focus {
+	border-color: #000000;
+}
+
+.contact-form input:invalid {
+	color: #e74246;
+	
+	border: 2px solid #e74246;
+	box-shadow: none;
+}
+
+.form-bottom {
+	clear: both;
+	width: 100%;
+}
+
+.form-bottom textarea {
+	width: 100%;
+	margin-bottom: 40px;
+	padding: 14px;
+	box-sizing: border-box;
+	resize: none;
+	
+	border: 2px solid #d7dcde;
+	outline: none;
+}
+
+.form-bottom textarea:hover {
+	border-color: #b4b9bb;
+}
+
+.form-bottom textarea:focus {
+	border-color: #000000;
+}
+
+.form-bottom .btn {
+	display: block;
+	width: 260px;
+	padding: 16px 0;
+	
+	text-transform: uppercase;
+	color: #ffffff;
+	text-align: center;
+	
+	background-color: #fb565a;
+	border: none;
 }
