--- a/css/styles.css
+++ b/css/styles.css
@@ -841,6 +841,16 @@ input[type="checkbox"]:checked + label::before {
 	background-position: -38px -5px;
 }
 
+input[type="radio"]:disabled + label,
+input[type="checkbox"]:disabled + label {
+	opacity: 0.3;
+}
+
+input[type="radio"]:disabled + label::before,
+input[type="checkbox"]:disabled + label::before {
+	opacity: 0.1;
+}
+
 .characteristics .slider {
 	position: relative;
 	
@@ -1268,33 +1278,6 @@ input[type="checkbox"]:checked + label::before {
 	box-shadow: 0 20px 70px -10px #000101;
 }
 
-.contact-block::before,
-.contact-block::after {
-	content: "";
-	position: absolute;
-	top: 87px;
-	right: 88px;
-	
-	width: 25px;
-	height: 5px;
-	
-	background-color: #e74246;
-	opacity: 0.3;
-}
-
-.contact-block::before:hover,
-.contact-block::after:hover {
-	opacity: 1;
-}
-
-.contact-block::before {
-	transform: rotate(45deg);
-}
-
-.contact-block::after {
-	transform: rotate(135deg);
-}
-
 .contact-block .title {
 	margin-top: 0;
 	margin-bottom: 41px;
@@ -1375,6 +1358,13 @@ input[type="checkbox"]:checked + label::before {
 	border-color: #000000;
 }
 
+.form-bottom textarea:invalid {
+	color: #e74246;
+	
+	border: 2px solid #e74246;
+	box-shadow: none;
+}
+
 .form-bottom .btn {
 	display: block;
 	width: 260px;
@@ -1386,4 +1376,61 @@ input[type="checkbox"]:checked + label::before {
 	
 	background-color: #fb565a;
 	border: none;
+	cursor: pointer;
+}
+
+.form-bottom .btn:hover {
+	background-color: #e74246;
+}
+
+.form-bottom .btn:active {
+	color: rgba(255, 255, 255, 0.3);
+	
+	background-color: #d7373b;
+}
+
+.cross {
+	position: absolute;
+	top: 80px;
+	right: 90px;
+	
+	width: 21px;
+	height: 21px;
+	
+	background-color: transparent;
+	border: none;
+	opacity: 0.3;
+	cursor: pointer;
+}
+
+.cross:hover {
+	opacity: 1;
+}
+
+.cross:active {
+	opacity: 0.1;
+}
+
+.cross::before,
+.cross::after {
+	content: "";
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	
+	width: 24px;
+	height: 4px;
+	margin-top: -2px;
+	margin-left: -12px;
+	
+	background-color: #e74246;
+}
+
+
+.cross::before {
+	transform: rotate(45deg);
+}
+
+.cross::after {
+	transform: rotate(135deg);
 }
