--- a/css/styles.css
+++ b/css/styles.css
@@ -934,7 +934,7 @@ input[type="checkbox"]:checked + label::before {
 
 input[type="radio"]:disabled + label,
 input[type="checkbox"]:disabled + label {
-	opacity: 0.3;
+	color: rgba(40, 49, 54, 0.3);
 }
 
 input[type="radio"]:disabled + label::before,
@@ -1184,7 +1184,7 @@ input[type="checkbox"]:disabled + label::before {
   display: inline-block;
   width: 360px;
   margin-right: 0;
-  margin-bottom: 35px;
+  margin-bottom: 36px;
 	padding-top: 40px;
   vertical-align: top;
 	
@@ -1198,7 +1198,6 @@ input[type="checkbox"]:disabled + label::before {
 	background-color: #e9e9e9;
 	border-top-right-radius: 5px;
 	border-top-left-radius: 5px;
-	cursor: pointer;
 }
 
 .catalog-item:nth-child(2n) {
@@ -1515,8 +1514,8 @@ input[type="checkbox"]:disabled + label::before {
 	top: 80px;
 	right: 90px;
 	
-	width: 21px;
-	height: 21px;
+	width: 22px;
+	height: 22px;
 	
 	font-size: 0;
 	
